--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-nav-bar></app-nav-bar>
-<app-article-list></app-article-list>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
 
 
-<!-- <router-outlet></router-outlet> -->
